--- a/The Farmery/package.json
+++ b/The Farmery/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "router-dom": "^2.2.11"
   },
   "devDependencies": {
